add css classes for basic flexbox layout

--- a/rescources/welcome.html
+++ b/rescources/welcome.html
@@ -5,33 +5,39 @@
 		<title> Willkomen | Kampfkunst </title>
 		<meta name="author" content="Administrator"/>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<link rel="stylesheet" type="text/css"  href="custom.css" title="custom-style"/>
+		<link rel="stylesheet" type="text/css"  href="../assets/css/custom.css" title="custom-style"/>
 	</head>
 
-	<script type="text/javascript" src="delete.js"></script>
+	<script type="text/javascript" src="../assets/js/jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="../assets/js/ajax.js"></script>
 
 	<script type="text/javascript">
     </script>
 
     <body>
         <header>
-            <div class="navigation">
+            <ul id="navigation">
+                <li class="nav-link"><a class="">Link1</a></li>
+                <li class="nav-link"><a class="">Link2</a></li>
+                <li class="nav-link"><a class=""></a></li>
+                <li class="nav-link"><a class=""></a></li>
 
-
-            </div>
+            </ul>
             <div class="info-box">
-                
+                Infobox
 
             </div>
 
         </header>
-        <div class="option-panel">
-            
+        <div id="site" class="row">
+            <div id="option-panel" class="col">
+                optionpanel
+            </div>
+            <div id="content" class="col">
+                content
+            </div>
         </div>
-        <div class="content">
-
-        </div>
-        <div class="footer">
+        <div id="footer" class="">
             <h1> Chuck Noriss, Bruce Lee, Chackie Chan</h1>
         </div>
     </body>
