--- a/rescources/welcome.html
+++ b/rescources/welcome.html
@@ -19,8 +19,8 @@
             <ul id="navigation">
                 <li class="nav-link"><a class="">Link1</a></li>
                 <li class="nav-link"><a class="">Link2</a></li>
-                <li class="nav-link"><a class=""></a></li>
-                <li class="nav-link"><a class=""></a></li>
+                <li class="nav-link"><a class="">LInk3</a></li>
+                <li class="nav-link"><a class="">Link4</a></li>
 
             </ul>
             <div class="info-box">
