--- a/rescources/welcome.html
+++ b/rescources/welcome.html
@@ -32,14 +32,14 @@
         <div id="site" class="row">
             <div id="option-panel" class="col">
                
-                <form id="form1" method="POST">
+                <form id="form1" action="test" method="POST">
                     <label for="fname">First name:</label>
                     <input type="text" id="fname" name="fname"><br><br>
                     <label for="lname">Last name:</label>
                     <input type="text" id="lname" name="lname">
-                    <buuton type="submit" value="New Customer" />
+                    <button type="submit" value="New Customer">filter</button>
+                
                     </form>
-                <button type="submit" form="form1" value="Submit">Filter anwenden</button>
             </div>
             <div id="content" class="col">
                 content
