build action filter middleware and refactor

--- a/rescources/welcome.html
+++ b/rescources/welcome.html
@@ -32,7 +32,7 @@
         <div id="site" class="row">
             <div id="option-panel" class="col">
                
-                <form id="form1" action="test" method="POST">
+                <form id="form1" action="filter" method="POST">
                     <label for="fname">First name:</label>
                     <input type="text" id="fname" name="fname"><br><br>
                     <label for="lname">Last name:</label>
