--- a/rescources/welcome.html
+++ b/rescources/welcome.html
@@ -47,7 +47,10 @@
             </div>
         </div>
         <div id="footer" class="">
-            <h1> Chuck Noriss, Bruce Lee, Chackie Chan</h1>
+            <div class="footer-box">Chuck Noriss</div>
+            <div class="footer-box">Bruce Lee</div>
+            <div class="footer-box">Chackie Chan</div>
+            
         </div>
     </body>
 </html>
