commenting and structuring code

--- a/rescources/welcome.html
+++ b/rescources/welcome.html
@@ -11,8 +11,10 @@
 	</head>
     
 	<script type="text/javascript" src="../assets/js/jquery-3.6.0.min.js"></script>
-    <script type="text/javascript" src="../assets/js/ajax.js"></script>
     <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
+    <script type="text/javascript" src="../assets/js/formularOptionData.js"></script>
+    <script type="text/javascript" src="../assets/js/ajax.js"></script>
+    
 
 	<script type="text/javascript">
     </script>
